fix newsletter_subscriptions/form btn in dark mode

--- a/app/assets/stylesheets/folio/_utilities.sass
+++ b/app/assets/stylesheets/folio/_utilities.sass
@@ -58,3 +58,10 @@
   @each $key, $color in $social-sites-colors
     &--#{$key}:hover
       color: $color
+
+=in-dark-mode
+  [data-bs-theme="dark"] &
+    @content
+
+  @media (prefers-color-scheme: dark)
+    @content
